fix issue with influencer name being cut on overflow

--- a/app/styles/components/influencer/profile-description/styles.less
+++ b/app/styles/components/influencer/profile-description/styles.less
@@ -5,6 +5,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  display: block;
 }
 
 //
